--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@ body { font-family: Arial; text-align: center; background:#111; color:white; }
 button { padding:10px 20px; font-size:18px; margin:10px; }
 input, select { padding:8px; margin:5px; }
 #game { display:none; }
+#board-container { position:relative; width:1024px; height:1024px; margin:20px auto; }
+#board { width:100%; height:100%; }
+.piece { width:30px; height:30px; border-radius:50%; position:absolute; transition: all 0.5s ease; }
+.yellow { background: yellow; }
+.red { background: red; }
+.blue { background: blue; }
+.purple { background: purple; }
 </style>
 </head>
 <body>
@@ -30,7 +37,10 @@ input, select { padding:8px; margin:5px; }
 </div>
 
 <div id="game">
-<h2 id="players"></h2>
+<h3 id="players"></h3>
+<div id="board-container">
+<img src="board.jpg" id="board">
+</div>
 <button onclick="roll()">Бросить кубик</button>
 <h3 id="info"></h3>
 </div>
@@ -38,18 +48,21 @@ input, select { padding:8px; margin:5px; }
 <script>
 const socket = io();
 let currentRoom = "";
+let playerColor = "";
+let pieces = {};
+let positions = [
+  [1000,600],[950,500],[900,450],[850,400],[800,350],[750,300],[700,250],[650,200],[600,150],[550,100],
+  [500,50],[450,100],[400,150],[350,200],[300,250],[250,300],[200,350],[150,400],[100,450],[50,500]
+];
 
 function join(){
   const name = document.getElementById("name").value;
   const room = document.getElementById("room").value;
   const color = document.getElementById("color").value;
-
   if(!name || !room) return;
-
   currentRoom = room;
-
+  playerColor = color;
   socket.emit("joinRoom", { name, room, color });
-
   document.getElementById("lobby").style.display = "none";
   document.getElementById("game").style.display = "block";
 }
@@ -62,6 +75,18 @@ socket.on("updateRoom", (game)=>{
   let text = "";
   game.players.forEach(p=>{
     text += p.name + " | Хайп: " + p.hype + "<br>";
+
+    if(!pieces[p.id]){
+      const div = document.createElement("div");
+      div.className = "piece " + p.color;
+      div.style.left = positions[p.position][0]+"px";
+      div.style.top = positions[p.position][1]+"px";
+      document.getElementById("board-container").appendChild(div);
+      pieces[p.id] = div;
+    } else {
+      pieces[p.id].style.left = positions[p.position][0]+"px";
+      pieces[p.id].style.top = positions[p.position][1]+"px";
+    }
   });
   document.getElementById("players").innerHTML = text;
 
