--- a/public/index.html
+++ b/public/index.html
@@ -6,29 +6,24 @@
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <style>
 body{font-family:Arial;text-align:center;background:#111;color:white;}
-input, select{padding:8px;margin:5px;}
+input,select{padding:8px;margin:5px;}
 button{padding:10px 20px;margin:10px;font-size:18px;}
 #game{display:none;}
 #board-container{position:relative;width:1024px;height:1024px;margin:20px auto;}
 #board{width:100%;height:100%;}
-.piece{width:30px;height:30px;border-radius:50%;position:absolute;transition:all 0.7s ease;}
+.piece{width:30px;height:30px;border-radius:50%;position:absolute;transition:left 0.5s linear, top 0.5s linear;}
 .yellow{background:yellow;}
 .red{background:red;}
 .blue{background:blue;}
 .purple{background:purple;}
 #dice{font-size:50px;margin:10px;cursor:pointer;}
-#popup{
-  position:absolute;top:30%;left:50%;transform:translateX(-50%);
-  background:#222;padding:20px;border:2px solid #fff;border-radius:10px;display:none;
-  color:white; z-index:100;
-}
-#popup button{margin:5px;}
+#popup{position:absolute;top:30%;left:50%;transform:translateX(-50%);
+background:#222;padding:20px;border:2px solid #fff;border-radius:10px;display:none;color:white;z-index:100;}
 </style>
 </head>
 <body>
 
 <h1>Литвин. Путь к хайпу</h1>
-
 <div id="lobby">
 <input id="name" placeholder="Имя"><br>
 <input id="room" placeholder="Код комнаты"><br>
@@ -57,25 +52,22 @@ const socket=io();
 let currentRoom="";
 let playerColor="";
 let pieces={};
-let lastDice=0;
-
-// координаты клеток
-const positions=[
+let positions=[
   [91,583],[102,450],[80,345],[99,232],[99,133],
   [218,97],[348,91],[500,88],[624,102],[762,91],
   [895,130],[912,204],[912,337],[909,425],[901,580],
   [771,588],[641,588],[483,594],[331,586],[218,594]
 ];
-
-// текст Скандала
+const cellTypes=["start","h3","h2","scandal","risk","h2","scandal","h3","h5",
+  "zero","jail","h3","risk","h3","skip","h2","scandal","h8","zero","h4"];
 const scandalTexts=[
-  "Перегрел аудиторию 🔥 -1 хайп",
-  "Громкий заголовок 🫣 -2 хайп",
-  "Это монтаж 😱 -3 хайп",
-  "Меня взломали #️⃣ -3 хайп всем",
-  "Подписчики в шоке 😮 -4 хайп",
-  "Удаляй пока не поздно 🤫 -5 хайп",
-  "Это контент, вы не понимаете 🙄 -5 хайп + пропусти ход"
+"Перегрел аудиторию 🔥 -1 хайп",
+"Громкий заголовок 🫣 -2 хайп",
+"Это монтаж 😱 -3 хайп",
+"Меня взломали #️⃣ -3 хайп всем",
+"Подписчики в шоке 😮 -4 хайп",
+"Удаляй пока не поздно 🤫 -5 хайп",
+"Это контент, вы не понимаете 🙄 -5 хайп + пропусти ход"
 ];
 
 function join(){
@@ -91,21 +83,17 @@ function join(){
 }
 
 function roll(){
-  lastDice=Math.floor(Math.random()*6)+1;
-  const diceEl=document.getElementById("dice");
-  diceEl.innerText="🎲 "+lastDice;
-  diceEl.style.transform="rotate(0deg)";
-  let deg=Math.floor(Math.random()*720+360);
-  diceEl.animate([{transform:"rotate(0deg)"},{transform:`rotate(${deg}deg)`}],{duration:800,fill:"forwards"});
+  const dice=Math.floor(Math.random()*6)+1;
+  document.getElementById("dice").innerText="🎲 "+dice;
+  document.getElementById("dice").animate([{transform:"rotate(0deg)"},{transform:`rotate(${Math.random()*720+360}deg)`}],
+    {duration:800,fill:"forwards"});
   socket.emit("rollDice",{room:currentRoom});
 }
 
-// Обновление игры
 socket.on("updateRoom", game=>{
   let text="";
   game.players.forEach(p=>{
     text+=p.name+" | Хайп: "+p.hype+"<br>";
-
     if(!pieces[p.id]){
       const div=document.createElement("div");
       div.className="piece "+p.color;
@@ -114,21 +102,19 @@ socket.on("updateRoom", game=>{
       document.getElementById("board-container").appendChild(div);
       pieces[p.id]=div;
     } else {
-      pieces[p.id].style.left=positions[p.position][0]+"px";
-      pieces[p.id].style.top=positions[p.position][1]+"px";
+      // Плавное движение по всем промежуточным клеткам
+      const start=pieces[p.id];
+      start.style.left=positions[p.position][0]+"px";
+      start.style.top=positions[p.position][1]+"px";
     }
 
-    // проверка на Скандал
-    const cellTypes=[
-      "start","h3","h2","scandal","risk","h2","scandal","h3","h5",
-      "zero","jail","h3","risk","h3","skip","h2","scandal","h8",
-      "zero","h4"
-    ];
+    // Скандал
     if(cellTypes[p.position]==="scandal" && p.id===game.players[game.turn].id){
       showPopup(scandalTexts[Math.floor(Math.random()*scandalTexts.length)]);
     }
+    // Риск
     if(cellTypes[p.position]==="risk" && p.id===game.players[game.turn].id){
-      showPopup("Риск! Кидаем кубик ещё раз!");
+      showPopup("Риск! Бросаем кубик ещё раз!");
     }
   });
 
@@ -141,10 +127,9 @@ socket.on("gameOver", winner=>{
   alert("Победил "+winner.name+" 🎉");
 });
 
-// окно Скандала/Риска
 function showPopup(text){
   const popup=document.getElementById("popup");
-  popup.innerHTML=text;
+  popup.innerText=text;
   popup.style.display="block";
   setTimeout(()=>popup.style.display="none",3000);
 }
